# fast-api-demo

./: README.md  main.py  pyproject.toml
