[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Tuneer Roy <53184517+tuneerroy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
